--- a/prototype.ipynb
+++ b/prototype.ipynb
@@ -9,7 +9,9 @@
    "source": [
     "from itertools import product\n",
     "import numpy as np\n",
-    "from sklearn.linear_model import LinearRegression"
+    "from sklearn.linear_model import LinearRegression\n",
+    "from scipy.special import comb\n",
+    "from math import comb as comb_math"
    ]
   },
   {
@@ -24,14 +26,17 @@
     "p = 2\n",
     "n = 1000\n",
     "total_subsets = 2 ** p\n",
-    "total_individuals = 4\n",
+    "total_individuals = total_subsets\n",
     "ones = np.full(shape=(n, 1), fill_value=1)\n",
     "X = np.random.normal(loc=0, scale=1, size=(n, p))\n",
+    "\n",
     "X_intercept = np.concatenate((ones, X), axis=1)\n",
     "beta = np.reshape(np.arange(1, p+2), newshape=(p+1, 1))\n",
+    "#beta = beta[[0, 2, 1], :]\n",
     "y = np.matmul(X_intercept, beta) + np.random.normal(loc=0, scale=1, size=(n, 1))\n",
     "beta_hat = np.matmul(np.matmul(np.linalg.inv(np.matmul(X_intercept.T, X_intercept)), X_intercept.T), y)\n",
-    "print('beta:\\n', beta)\n",
+    "print('X: \\n', X[:3, ])\n",
+    "print('beta_real:\\n', beta)\n",
     "print('beta_hat:\\n', beta_hat)"
    ]
   },
@@ -43,10 +48,9 @@
    "outputs": [],
    "source": [
     "# Point to be described\n",
-    "x_new = np.array([[0, 2]])\n",
-    "x_new_intercept = np.array([[1, 0, 0]])\n",
-    "print(x_new_intercept.shape)\n",
-    "print(beta.shape)"
+    "x_new = np.array([[2, 2]])\n",
+    "x_new_intercept = np.concatenate((np.array([1], ndmin=2), x_new), axis=1)\n",
+    "print(x_new_intercept)"
    ]
   },
   {
@@ -83,14 +87,18 @@
    "outputs": [],
    "source": [
     "# Obtain matrix Z\n",
-    "def obtain_Z(p, total_individuals):\n",
+    "def obtain_Z(num_features, total_individuals):\n",
     "    all_subsets = product([0, 1], repeat=p)\n",
-    "    idx_individuals = np.random.choice(a=total_subsets, size=total_individuals, replace=False)\n",
-    "    list_individuals = np.random.permutation([x for i, x in enumerate(all_subsets) if i in idx_individuals])\n",
+    "    idx_individuals = np.random.choice(a=2**num_features, size=total_individuals, replace=False)\n",
+    "    list_individuals = [x for i, x in enumerate(all_subsets) if i in idx_individuals]\n",
     "    Z = np.array(list_individuals, dtype=int)\n",
-    "    return Z\n",
+    "    total_ones_Z = np.sum(Z, axis=1)\n",
+    "    idx_non_zeros_Z = np.where(total_ones_Z>0)\n",
+    "    idx_non_zeros_Z = idx_non_zeros_Z[0]\n",
+    "    Z_filtered = Z[idx_non_zeros_Z, :]\n",
+    "    return Z_filtered\n",
     "Z = obtain_Z(p, total_individuals)\n",
-    "Z[:3, ]"
+    "print(Z)"
    ]
   },
   {
@@ -107,27 +115,23 @@
     "    p = Z.shape[1]\n",
     "    idx_columns = range(p)\n",
     "    ones_vector = np.full(shape=(n_rows_data, 1), fill_value=1)\n",
-    "    total_ones_Z = np.sum(Z, axis=1)\n",
-    "    idx_non_zeros_Z = np.where(total_ones_Z>0)\n",
-    "    idx_non_zeros_Z = idx_non_zeros_Z[0]\n",
-    "    Z_filtered = Z[idx_non_zeros_Z, :]\n",
-    "    n_rows_Z_filtered = Z_filtered.shape[0]\n",
-    "    H = np.empty(shape=(n_rows_Z_filtered, p))\n",
+    "    n_rows_Z = Z.shape[0]\n",
+    "    H = np.empty(shape=(n_rows_Z, p))\n",
     "\n",
     "    if verbose:\n",
-    "        print('Z_filtered:\\n', Z_filtered)\n",
+    "        print('Z:\\n', Z)\n",
     "        print('data:\\n', data[:3, ])\n",
     "        print('initial H:\\n', H)\n",
     "        print('x_new:\\n', x_new)\n",
     "        print('---------------------')\n",
     "\n",
-    "    for i_z, z in enumerate(Z_filtered):\n",
+    "    for i_z, z in enumerate(Z):\n",
     "        total_ones = np.sum(z)\n",
     "        if total_ones < p:\n",
     "            if verbose:\n",
     "                print('z:\\n', z)\n",
     "            # Build X\n",
-    "            idx_x = np.where(z==1)\n",
+    "            idx_x = np.where(z == 1)\n",
     "            idx_x = idx_x[0]\n",
     "            X = data[:, idx_x]\n",
     "            X_intercept = np.concatenate((ones_vector, X), axis=1)\n",
@@ -165,17 +169,70 @@
     "    if verbose:\n",
     "        print('Final H:\\n', H)\n",
     "    return H\n",
-    "H = obtain_H(Z, X, x_new, verbose=True)"
+    "H = obtain_H(Z, X, x_new, verbose=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f482dd77-bbc6-4411-b2ed-a79a6258d519",
+   "id": "ac9874ab-df1a-4fc0-af44-3367dac824ce",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Obtain matrix Y_pred"
+    "print(Z)\n",
+    "print(H)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71102ffd-79b0-4cda-9655-62828139d131",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TO DO: run this in parallel\n",
+    "def calculate_comb(p, k):\n",
+    "    num = p - 1\n",
+    "    den = comb_math(p, k) * k * (p - k)\n",
+    "\n",
+    "    return num/den\n",
+    "\n",
+    "def get_importance(Z, H, data, predict_fn):\n",
+    "    num_features = data.shape[1]\n",
+    "    w = []\n",
+    "    inf_value = 1e9\n",
+    "\n",
+    "    Y = predict_fn(H)\n",
+    "    y_all = np.reshape(np.mean(predict_fn(data)), newshape=(1, 1))\n",
+    "    Y_concat = np.concatenate((Y, y_all))\n",
+    "    Y_centered = Y_concat - y_all\n",
+    "\n",
+    "    z_void = np.zeros(shape=(1, num_features))\n",
+    "    Z_concat = np.concatenate((Z, z_void))\n",
+    "    \n",
+    "    S = np.sum(Z_concat, axis=1, dtype=np.int64)\n",
+    "    w = [inf_value if s == 0 or s == num_features else calculate_comb(num_features, s) for s in S]\n",
+    "    W = np.diag(w)\n",
+    "\n",
+    "    importance = np.matmul(np.matmul(np.matmul(np.linalg.inv(np.matmul(np.matmul(Z_concat.T, W), Z_concat)), Z_concat.T), W), Y_centered)\n",
+    "    return importance\n",
+    "\n",
+    "importance = get_importance(Z, H, X, linear_model.predict)\n",
+    "print(importance)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1145c8ae-4a94-4d70-a673-b51ec61525e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('individual importance:\\n', importance)\n",
+    "print('aggregated importnace:\\n', np.sum(importance))\n",
+    "x_new_beta = [x * b for x, b in zip(x_new[0], beta[1:])]\n",
+    "print('x_new * beta:\\n', x_new_beta)\n",
+    "print('predicted value for x_new - mean value:\\n', linear_model.predict(x_new) - np.mean(linear_model.predict(X)))"
    ]
   }
  ],
