Change notebooks location

--- a/notebooks/prototype.ipynb
+++ b/notebooks/prototype.ipynb
@@ -7,11 +7,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "cwd = os.getcwd()\n",
+    "nwd = os.path.dirname(cwd)\n",
+    "os.chdir(nwd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42cddb45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
     "import numpy as np\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from ghostSHAP.ghost_shap import GhostShap\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2"
+    "from ghostSHAP.ghost_shap import GhostShap"
    ]
   },
   {
@@ -23,7 +36,7 @@
    "source": [
     "# Generate data\n",
     "np.random.seed(seed=5)\n",
-    "p = 2\n",
+    "p = 10\n",
     "n = 1000\n",
     "total_subsets = 2 ** p\n",
     "total_individuals = total_subsets\n",
@@ -48,7 +61,7 @@
    "outputs": [],
    "source": [
     "# Point to be described\n",
-    "x_new = np.array([[2, 2]])\n",
+    "x_new = np.full(shape=(1, p), fill_value=2)\n",
     "x_new_intercept = np.concatenate((np.array([1], ndmin=2), x_new), axis=1)\n",
     "print(x_new_intercept)"
    ]
