--- a/notebooks/prototype.ipynb
+++ b/notebooks/prototype.ipynb
@@ -124,9 +124,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ghostSHAP",
+   "display_name": "Python 3.9.7 ('.ghostSHAP': venv)",
    "language": "python",
-   "name": "ghostshap"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -139,6 +139,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "23c677cf914576091b520cc422ffbc9328a4ac0579b601aa498faf34de7178e1"
+   }
   }
  },
  "nbformat": 4,
